# projetTetris

src/: CMakeLists.txt  README.md  board.c  board.h  game_manager.c  game_manager.h  piece.c  piece.h  player.c  player.h  printer.c  printer.h  shapes.h  tetric.c  window_manager.c  window_manager.h
